<resources>
    <string name="app_name">Trafictube</string>
    <string name="clipuri_noi">Clipuri noi</string>
    <string name="clipul_zilei">Clipul zilei</string>
    <string name="top_clipuri_48_ore">Top clipuri 48 ore</string>
    <string name="top_s_pt_m_nal">Top săptămânal</string>
    <string name="top_general">Top general</string>
    <string name="caut">Caută</string>
    <string name="despre">Despre</string>
    <string name="error_loading">Eroare la încarcarea datelor.\nVerificați conexiunea la internet.</string>
    <string name="error_player">Eroare la playerul video.</string>
    <string name="viewUserDescription">Vezi clipurile utilizatorului</string>
    <string name="thumbsUpDescription">Votează</string>
    <string name="playButtonDescription">Pornește clip</string>
    <string name="search_dialog_title">Caută</string>
    <string name="cancel">Renunță</string>
    <string name="search_no_results">Nu am găsit nici un video :(</string>
    <string name="retry_text">Reîncarcă</string>
    <string name="about_application_text">Despre aplicatie</string>
    <string name="main_activity_label">Trafictube</string>
    <string name="user_posts_activity_label">Clipurile utilizatorului</string>
    <string name="user_posts_of">Clipurile lui</string>
    <string name="dialog_exit_title">Ieșire</string>
    <string name="dialog_exit_text">Ești sigur că vrei să închizi Trafictube?</string>
    <string name="yes">Da</string>
    <string name="no">Nu</string>
    <string name="trafictube">Trafictube.ro</string>
    <string name="dialog_theme_title">Alege tema</string>
    <string name="theme_item">Schimbă tema</string>
    <string name="activity_post_label">Clip video</string>
    <string name="vimeo_install_text">Pentru a putea vedea un clip încărcat pe vimeo.com trebuie să aveți instalată aplicația Vimeo din Google Play Store.</string>
    <string name="youtube_install_text">Pentru a putea vedea un clip încărcat pe youtube.com trebuie să aveți instalată aplicația Youtube din Google Play Store.</string>
    <string name="install_button">Instalează aplicația</string>
    <string name="error_loading_post_of_the_day">Nu pot să găsesc postul zilei.</string>
    <string name="post_play_button">Pornește clip</string>
</resources>
