<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:backgroundTint="?attrCardBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="3.2"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">

                <com.micutu.trafictube.Views.FadeInNetworkImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top"
                    android:background="?attrCardTitleTransparentBackgroundColor"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textColor="?attrCardTitleTextColor"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.8"
            android:gravity="center|right"
            android:orientation="horizontal"
            android:background="?attrCardBottomBackgroundColor">

            <TextView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:textColor="?attrCardTextColor"
                android:textSize="12sp" />

            <com.micutu.trafictube.Views.AppCompatImageButtonWithTooltip
                android:id="@+id/view_user"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/viewUserDescription"
                android:padding="@dimen/icon_padding"
                android:src="@drawable/ic_user" />

            <com.micutu.trafictube.Views.AppCompatImageButtonWithTooltip
                android:id="@+id/thumbs_up"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/thumbsUpDescription"
                android:padding="@dimen/icon_padding"
                android:src="@drawable/ic_thumbs_up" />

            <com.micutu.trafictube.Views.AppCompatImageButtonWithTooltip
                android:id="@+id/play_button"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/playButtonDescription"
                android:padding="@dimen/icon_padding"
                android:src="@drawable/ic_play_button" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>